cryptoUtil updated clientwise